project("Practices" CXX)

add_subdirectory("03-functions")
add_subdirectory("04-classes")
add_subdirectory("05-operator-overloading")
add_subdirectory("06-raii")
add_subdirectory("07-subtype-polymorphism")
add_subdirectory("08-subtype-polymorphism")
add_subdirectory("09-vcpkg")
add_subdirectory("10-sfml")

